<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:text="@string/change_lesson" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/lesson_name"
        android:id="@+id/lesson_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/lesson_begin"
            android:importantForAutofill="no"
            android:layout_weight="1" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/lesson_end"
            android:importantForAutofill="no"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/delete_lesson_button"
        android:text="@string/delete_lesson"
        android:textColor="#D32F2F" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/cancel_button"
            android:textColor="@color/colorAccent"
            android:layout_weight="2" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/ok_button"
            android:textColor="@color/colorAccent"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>